# csv-stream-language

./: .gitignore  Cargo.toml  LICENSE  data.csv  readme.md  test.fluss
src/: builtins.rs  commands.rs  data.csv  eval_chain.rs  global_params.rs  grammar.pest  lib.rs  main.rs  namespace.rs  parse.rs  rule.rs  test.fluss  util.rs
src/builtins/: generator.rs  io.rs  mod.rs  select.rs  summary.rs
