[package]
name = "csv-stream-language"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan Rotter (hydrogen602)"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/hydrogen602/csv-stream-language"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
csv = "1.1.6"
# queues = "1.1.0"
chrono = "0.4.19"
regex = "1.5.5"
